--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="contain">
           <a href="#" class="Brand-name">
-            <img src="assets/image/Logo.webp" alt="#" />
+            <img src="assets/image/logo.svg" alt="#" />
           </a>
 
           <ul class="navbar-nav active">
@@ -68,7 +68,7 @@
               </div>
             </div>
             <div class="image">
-              <img src="assets/image/Home.webp" alt="#" />
+              <img src="assets/image/home.svg" alt="#" />
             </div>
           </div>
         </div>
@@ -141,7 +141,6 @@
           </div>
         </div>
       </section>
-     
     </main>
   </body>
 </html>
